@@ -38,6 +38,8 @@
 <p>2015-04-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xwd.c (ReadXWDImage): Fix Coverity 10104 &quot;Division or
+modulo by zero&quot;.</li>
 <li>magick/resize.c (ResizeImage): Fix Coverity 53404 &quot;Division or
 modulo by zero&quot;.</li>
 <li>coders/ps3.c (WritePS3MaskImage): Fix Coverity 53415 &quot;Improper
